RESOLVED FIXED 64015
IconDatabase::synchronousIconForPageURL() has inconsistent API when no custom icon is available
https://bugs.webkit.org/show_bug.cgi?id=64015
Summary IconDatabase::synchronousIconForPageURL() has inconsistent API when no custom...
John Sullivan
Reported 2011-07-06 12:48:44 PDT
IconDatabase::synchronousIconForPageURL() returns 0 for some URLs that don't have custom icons (http/https ones), but instead returns the default icon (at a particular image size) for other URLs that don't have custom icons (anything other than http/https). This inconsistency makes it impossible to use the return value to know whether the page has a custom icon, or to use any client-specific default icon. In Radar as <rdar://problem/9706277>.
Attachments
Patch to return 0 in all cases for which there is no custom icon (902 bytes, patch)
2011-07-06 12:54 PDT, John Sullivan
sullivan: review-
Patch to return 0 in all cases where there is no custom icon (now with ChangeLog) (1.39 KB, patch)
2011-07-06 12:58 PDT, John Sullivan
sullivan: review-
Patch to always return 0 if there's no custom icon (now with correctly-styled ChangeLog!) (1.45 KB, patch)
2011-07-06 13:00 PDT, John Sullivan
adachan: review+
John Sullivan
Comment 1 2011-07-06 12:54:52 PDT
Created attachment 99862 [details] Patch to return 0 in all cases for which there is no custom icon
John Sullivan
Comment 2 2011-07-06 12:55:12 PDT
Oops, forgot the ChangeLog. Will resubmit.
John Sullivan
Comment 3 2011-07-06 12:58:22 PDT
Created attachment 99864 [details] Patch to return 0 in all cases where there is no custom icon (now with ChangeLog)
John Sullivan
Comment 4 2011-07-06 12:59:31 PDT
Oops, neglected to add bugzilla URL to ChangeLog. Third time's a charm!
WebKit Review Bot
Comment 5 2011-07-06 13:00:02 PDT
Attachment 99864 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
John Sullivan
Comment 6 2011-07-06 13:00:10 PDT
Created attachment 99866 [details] Patch to always return 0 if there's no custom icon (now with correctly-styled ChangeLog!)
John Sullivan
Comment 7 2011-07-06 13:29:17 PDT
Note You need to log in before you can comment on or make changes to this bug.