IconDatabase::synchronousIconForPageURL() has inconsistent API when no custom icon is available <https://bugs.webkit.org/show_bug.cgi?id=64015> <rdar://problem/9706277>

For some URLs it would return a particular size of default icon; for other
URLs it would return 0.

Reviewed by Ada Chan.

* loader/icon/IconDatabase.cpp:
(WebCore::IconDatabase::synchronousIconForPageURL):
Return 0 in all cases where there is no custom icon.



Canonical link: https://commits.webkit.org/79752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90486 268f45cc-cd09-0410-ab3c-d52691b4dbfc